# lv_port_pc_vscode

./: CMakeLists.txt  filetohex.py  lv_conf.h  simulator.code-workspace  update.py  笔记.md
main/src/: main.c  my_ui.c  my_ui.h
main/ui/: CMakeLists.txt  my_ui.cpp  my_ui.h  page1.cpp  page2.cpp  page_manager.cpp  page_manager.h  page_menu.cpp  page_mpu6050.cpp  page_pmu.cpp  page_qmc5883l.cpp  page_sd_files.cpp  page_settings.cpp  page_time.cpp  page_wifi.cpp  pages_common.h  pre_page.cpp
main/ui/access/: Check_Mark.c  Liquid_4_Dot_Loader.c  Material_wave_loading.c  MkdrU8kJNP.c  MtkNxUsr7K.c  MtkNxUsr7K.json  NotoSansSC_Medium_3500.c  Ripple_loading_animation.c  Rocket_in_space.c  a2wlZMBfLY.c  a2wlZMBfLY.json  kIz6PnBYLY.c  kIz6PnBYLY.json  loading.c  my_font.c
main/ui/system/: battery_service.cpp  battery_service.h  esp_err.h  esp_err_to_name.cpp  esp_err_to_name.h  esp_heap_caps.h  esp_log.h  esp_log_impl.cpp  esp_log_internal.h  esp_rom_sys.h  esp_sleep.h  esp_wifi.h  filesystem_service.cpp  filesystem_service.hpp  lcd_brightness.cpp  lcd_brightness.hpp  mpu6050_service.cpp  mpu6050_service.h  pmu_service.cpp  pmu_service.h  qmc5883l.h  qmc5883l_service.cpp  qmc5883l_service.h  sd_init.hpp  sd_init_mock.cpp  sd_init_mock.hpp  sd_init_windows.cpp  sd_init_windows.h  sdkconfig.h  sys_time.h  system.h  task_manager.cpp  task_manager.hpp  time_service.cpp  time_service.h  wifi_manager.cpp  wifi_manager.h  windows_compat.cpp  windows_compat.h
main/ui/system/hal/: gpio_types.h  touch_sensor_types.h
main/ui/system/soc/: soc_caps.h
